fixed resizing issue on mobile
There was a problem with the responsiveness of the
design, It looked distroted on tablets, so I fixed it.

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
     justify-content: center;
     align-items: center;
     background-color: white;
+    max-width: 450px;
     
 
 }
@@ -32,12 +33,14 @@
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     height: auto;
+    
 }
 
-.product-img img{
+.product-img picture img{
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     filter: brightness(90%);
+    
 }
 
 .product-details{
